fixed mobile overflow issue

--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
 body {
     color: var(--grayishBlue);
     background: var(--white);
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 
@@ -44,11 +46,6 @@ body {
 
 .navbar-toggler {
     background: transparent;
-}
-
-.navButtons {
-    /* position: absolute;
-    right: 0rem; */
 }
 
 .navbar-nav {
